--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,47 @@
-*{font-family: helvetica}
+* {
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
 
+}
 
-/* Apply box-sizing and padding to all divs */
+header, footer {
+	text-align: center;
+	color: white;
+	font-family: helvetica;
+	background-color: #60aa49;
+	padding: 20px;
+	border-radius: 4px;
+
+}
+
 div {
-    box-sizing: border-box;
-    text-align: center;
-    border-radius: 4px;
-    padding: 10px;
-    margin: 10px;
-}
-
-/* Header */
-.header {
+	text-align: center;
 	color: white;
-    background: 65c456;
-    height: 50px;
-    
+	font-family: helvetica;
+	border-radius: 4px;
+	padding: 20px;
 }
 
-/* Group */
 .group {
+	display: inline-block;
+	background-color: #eaeaed;
+	text-align: center;
 	color: gray;
-	background: #CCCCCC;
-	height: 150px;
-
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
-/* main */
+
 .main {
-	height: 50px;
-	color: white;
-	background: 65c456;
-	margin: 2px;
-	float: left;
+	background-color: #60aa49;
 	width: 75%;
+	float: left;
 }
 
-/* sidebar */
-.sidebar {
-	height: 50px;
-	color: white;
-	background: 65c456;
+.sidebar{
+	background-color: #60aa49;
+	width: 20%;
 	float: right;
-	width: 25%;
-	
 }
 
-/* Footer */
-.footer {
-	color: white;
-    background: 65c456;
-    height: 50px;
-}
