--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
-
+	font-size: 10pt;
 }
 
 header, footer {
@@ -12,7 +12,10 @@ header, footer {
 	background-color: #60aa49;
 	padding: 20px;
 	border-radius: 4px;
+}
 
+p {
+	padding-bottom: 20px;
 }
 
 div {
