--- a/floats/example-02.css
+++ b/floats/example-02.css
@@ -15,11 +15,13 @@
 .sidebar {
 	float: left;
 	width: 250px;
+	height: 300px;
 }
 
 .main-content {
 	float: left;
-	width:774px;
+	width:734px;
+	height: 300px;
 }
 
 .footer {
