--- a/floats/example-03.css
+++ b/floats/example-03.css
@@ -14,20 +14,23 @@
 .header {}
 
 .sidebar {
-	/* hint! */
+	float: left;
+	width:734px;
+	height: 300px;
+	
 }
 
 .main-content {
-	/* hint! */
+	float: right;
+	width: 250px;
+	height: 300px;
 }
 
 .footer {
-	/* hint! */
+	clear: both;
 }
 
-/*
+
 div {
 	margin: 20px;
 }
-*/
-/* uncomment me to see if you missed anything! */
