--- a/floats/example-06.css
+++ b/floats/example-06.css
@@ -11,10 +11,14 @@
 }
 
 
-.main-content {}
+.main-content {
+	width: 984px;
+	float: left;
+}
 /* hint! what do you need to add here? */
 
 .widget {
+	float: left;
 	/* how do you make the widgets float next to each other? */
 	/* what happens when you change float left to float right? why? */
 }
@@ -22,6 +26,7 @@
 
 .footer {
 	/* hint! */
+	clear: both;
 }
 
 
