--- a/floats/example-09.css
+++ b/floats/example-09.css
@@ -5,14 +5,46 @@
 
 /* Example 09 */
 
-.header {}
+.container {
+	width: 90%;
+	margin: 0 auto;
+	height: 400px;
+	margin: 10px;
+	clear:both;
+	
+}
 
-.sidebar {}
 
-.main-content {}
+.header {
+	width: 99%;
+	float: left;
+	clear: both;
+}
 
-.sub-content {}
 
-.footer {}
+.sidebar {
+	float: left;
+	width: 33%;
+	height: 300px;
+}
+
+.main-content {
+	float: left;
+	width: 33%;
+	height: 300px;
+}
+
+.sub-content {
+	float: left;
+	width: 33%;
+	height: 300px;
+}
+
+
+.footer {
+	width: 99%;
+	float: left;
+	clear: both;
+}
 
 /* what do you have to add to make the sidebar and content and footer not be the full width of the browser? */
