--- a/floats/example-04.css
+++ b/floats/example-04.css
@@ -11,22 +11,33 @@
 }
 
 
-.header {}
+.header {
+	width: 984px;
+	float: left; 
+}
 /* hint! you have to contain the floated children elements. */
 
 .logo {
-	/* hint! */
+	float: left;
 }
 
 .navigation {
-	/* hint! */
+	
+	float:right;
 }
 
 .sidebar {
+	float: left; /* float the sidebar to the left—it will go to the left-most side of its containing element, on a new line after the last non-floated element */
+    width: 250px; /* 1024 - 250 = 774px remaining for the main content div. because we used box-sizing, this div will actually be 250px even with 20px of padding on each side. try removing the box-sizing property in style.css and see how that changes the calculated width of this div. */
+    height: 300px;
 }
 
 .main-content {
+	float: left; /* you could float right, too, but left is more consistent */
+    width: 734px; /* however, this can't actually be 774px because there's 40px of padding, and since we used box-sizing, the padding is removed from the width */
+    height: 300px; /
 }
 
 .footer {
+	clear: both;
 }
