--- a/floats/example-07.css
+++ b/floats/example-07.css
@@ -6,23 +6,48 @@
 /* Example 07 */
 
 .container {
-	width: 1024px; /* change me to a percentage width, like 80% */
+	width: 90%; /* change me to a percentage width, like 80% */
 	margin: 0 auto;
 }
 
 
-.header {}
+.header {
+	width: 90%;
+	float: left;
+	clear: both;
+}
 
-.logo {}
+.logo {
+	float: left;
+	width: 25%;
+}
 
-.navigation {}
+.navigation {
+	float: right;
+	width: 60%;
+}
 
-.sidebar {}
+.sidebar {
+	float: left;
+	width: 25%;
+}
 
-.main-content {}
+.main-content {
+	width: 90%;
+	float: left;
+}
 
-.sub-content {}
+.sub-content {
+	float: right;
+	width: 60%;
+}
 
-.sub-content-2 {}
+.sub-content-2 {
+	float: right;
+	width: 60%;
+}
 
-.footer {}
+.footer {
+	width: 90%;
+	clear: both;
+}
