--- a/floats/example-11.css
+++ b/floats/example-11.css
@@ -5,14 +5,40 @@
 
 /* Example 11 */
 
-.header {}
+.header {
+	width: 100%;
+	float: left;
+	clear: both;
+}
 
-.main-content {}
+.logo {
+	float: left;
+}
+
+.navigation {
+	float: right;
+	
+}
+
+.main-content {
+	clear: both;
+	height: 1600px;
+
+}
 /* hint! */
 
-.post {}
+.post {
+	float: left;
+}
 /* hint! */
 
-.image {}
+.image {
+	float: left;
+	height: 100px;
+	width: 100px;
+}
 
-.post_excerpt {}
+.post_excerpt {
+	float: right;
+	width: 70%;
+}
