--- a/floats/example-02.css
+++ b/floats/example-02.css
@@ -12,6 +12,13 @@
 
 .header {}
 
+.header:after {
+    content: " ";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+}
 .sidebar {
 	float: left;
 	width: 250px;
