--- a/floats/example-03.css
+++ b/floats/example-03.css
@@ -4,12 +4,24 @@
 /* ---------------------------------------------------------- */
 
 /* Example 03 */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
 
 .container {
 	width: 1024px;
 	margin: 0 auto;
 }
 
+.container:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
 
 .header {}
 
