--- a/floats/example-04.css
+++ b/floats/example-04.css
@@ -5,6 +5,13 @@
 
 /* Example 04 */
 
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .container {
 	width: 1024px;
 	margin: 0 auto;
@@ -15,6 +22,13 @@
 	width: 984px;
 	float: left; 
 }
+
+.header:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
 /* hint! you have to contain the floated children elements. */
 
 .logo {
