--- a/floats/example-05.css
+++ b/floats/example-05.css
@@ -14,6 +14,12 @@
 	width: 984px;
 	float: left; 
 }
+
+.header:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
 /* hint! what do you have to add here? */
 
 .logo {
@@ -48,6 +54,12 @@
 	height: 150px;
 	margin: 5px;
 
+}
+
+.main-content:after {
+  content: " ";
+  display: block;
+  clear: both;
 }
 
 .footer {
