--- a/floats/example-10.css
+++ b/floats/example-10.css
@@ -8,18 +8,28 @@
 .container {
 	width: 90%;
 	margin: 0 auto;
-	height: 400px;
-	clear:both;
-	
 }
 
+.container:after {
+    content: " ";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+}
 
 .header {
 	width: 99%;
-	float: left;
-	clear: both;
+	
 }
 
+.header:after {
+    content: " ";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+}
 
 .sidebar {
 	float: left;
@@ -36,8 +46,7 @@
 
 .footer {
 	width: 99%;
-	float: left;
-	clear: both;
+	
 }
 
 /* what do you have to add to make the sidebar and content and footer not be the full width of the browser? */
