--- a/floats/example-11.css
+++ b/floats/example-11.css
@@ -7,8 +7,15 @@
 
 .header {
 	width: 100%;
-	float: left;
-	clear: both;
+	
+}
+
+.header:after {
+    content: " ";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
 }
 
 .logo {
@@ -21,9 +28,16 @@
 }
 
 .main-content {
-	clear: both;
-	height: 1600px;
+	
 
+}
+
+.main-content:after {
+    content: " ";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
 }
 /* hint! */
 
