--- a/floats/example-09.css
+++ b/floats/example-09.css
@@ -8,10 +8,16 @@
 .container {
 	width: 90%;
 	margin: 0 auto;
-	height: 400px;
-	margin: 10px;
-	clear:both;
 	
+	margin: 10px;
+	
+	
+}
+
+.container:after {
+  content: " ";
+  display: block;
+  clear: both;
 }
 
 
